--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>"HOLA MUNDO CON GIT 2024"</p>
+    <p>"HOLA MUNDO CON GIT 2024 lunes 6/10"</p>
+    <p>"HOLA MUNDO CON GIT 2024 lunes 13/10"</p>
+    <a href="http://"></a>
 </body>
-</html>
+</html> 
