--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <p>"HOLA MUNDO CON GIT 2024 lunes 6/10"</p>
     <p>"HOLA MUNDO CON GIT 2024 lunes 13/10"</p>
+    <p>"HOLA MUNDO CON GIT 2024 lunes 14/10"</p>
     <a href="http://"></a>
+    <H1>NOS ENCANTA GIT! </H1>
 </body>
 </html> 
